manifests/kustomize/base/pipeline/allow-same-namespace-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-same-namespace
  namespace: kubeflow
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
    # Allow pods in profile namespace (namely launcher/driver) pods to communicate with
    # the API server.
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/part-of: kubeflow-profile
      ports:
        - protocol: TCP
          port: 8887
  policyTypes:
    - Ingress
